# dremio-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
docs/: architecture.md  frameworks.md  settings.md  streamable-http.md  tools.md
examples/: streamable_client.py  web_test_interface.html
src/dremioai/: __init__.py  log.py  mcp_test.py
src/dremioai/api/: __init__.py  oauth2.py  transport.py  util.py
src/dremioai/api/cli/: __init__.py  __main__.py  engines.py  oauth.py  prometheus.py  search.py
src/dremioai/api/dremio/: catalog.py  engines.py  projects.py  search.py  sql.py  usage.py
src/dremioai/api/prometheus/: vm.py
src/dremioai/config/: settings.py  tools.py
src/dremioai/resources/: auth_redirect.html
src/dremioai/servers/: mcp.py  streamable_http.py
src/dremioai/tools/: tools.py
tests/: conftest.py  test_fastmcp_basic.py  test_http_mock_framework.py  test_log.py  test_simple_fastmcp_server.py  test_transport_with_mocks.py
tests/api/dremio/: test_sql.py
tests/config/: test_settings.py
tests/mocks/: __init__.py  http_mock.py
tests/resources/catalog/: dataset_details.json  lineage.json  spaces.json  table_schema.json  tags.json  wiki.json
tests/resources/projects/: project_list.json
tests/resources/search/: search_results.json
tests/resources/sql/: job_results.json  job_status.json  job_submission.json  query_results.json
tests/servers/: test_mcp.py  test_streamable_http.py
tests/tools/: test_output_validation.py  test_tools.py
(+3 files in other folders)
