[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dremioai"
version = "0.1.0"
description = "Foundation for llm integration with Dremio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "beeai-framework>=0.1.8",
    "click>=8.1.8",
    "fastapi>=0.115.11",
    "langchain>=0.3.20",
    "langchain-core>=0.3.41",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.12",
    "mcp>=1.9.4",
    "openai>=1.65.3",
    "pandas>=2.2.3",
    "prompt-toolkit>=3.0.50",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "sqlglot>=26.23.0",
    "structlog>=25.1.0",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dremioai*"]

[project.scripts]
dremio-mcp-server = "dremioai.servers.mcp:cli"
